# blazecode

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
blazecode/: __init__.py  __main__.py  cli.py  mascot.py  onboarding.py
blazecode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blazecode/agent/: __init__.py  loop.py  observer.py  prompts.py  tool_events.py
blazecode/config/: __init__.py  settings.py
blazecode/context/: __init__.py  compaction.py
blazecode/llm/: __init__.py  client.py  models.py
blazecode/permissions/: __init__.py  approval.py
blazecode/session/: __init__.py  message.py  store.py
blazecode/skills/: __init__.py  loader.py
blazecode/tools/: __init__.py  base.py  bash.py  edit.py  grep.py  read.py  write.py
blazecode/ui/: completer.py  render.py  repl.py  theme.py
core/: agent.py  config.py  llm.py  parser.py  prompts.py
src/blazecode/: __init__.py  __main__.py
src/blazecode/cli/: app.py
src/blazecode/core/: __init__.py  config.py  errors.py  events.py  permissions.py
src/blazecode/engine/: __init__.py  loop.py  session.py
src/blazecode/providers/: __init__.py  client.py  registry.py
src/blazecode/tools/: __init__.py  base.py  edit.py  glob_tool.py  grep.py  read.py  registry.py  shell.py  write.py
src/blazecode/ui/: terminal.py
tests/: conftest.py  test_agent_loop.py  test_async_audit.py  test_client_offline.py  test_compaction.py  test_config.py  test_loop.py  test_mascot.py  test_onboarding.py  test_provider_registry.py  test_providers.py  test_render.py  test_session.py  test_sessions_skills.py  test_tools.py
